--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bemit/cloud-id",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "",
     "homepage": "https://bemit.codes",
     "author": {
@@ -22,10 +22,12 @@
     },
     "type": "module",
     "exports": {
-        "./AuthValidator": "./AuthValidator/index.js",
-        "./IdManager": "./IdManager/index.js",
-        "./IdClientAuth": "./IdClientAuth/index.js",
-        "./ResourceClient": "./ResourceClient/index.js"
+        "./AuthCache": "./AuthCache.js",
+        "./AuthCacheRedis": "./AuthCacheRedis.js",
+        "./AuthRuleError": "./AuthRuleError.js",
+        "./IdClientAuth": "./IdClientAuth.js",
+        "./IdManager": "./IdManager.js",
+        "./ResourceClient": "./ResourceClient.js"
     },
     "repository": {
         "type": "git",
@@ -39,34 +41,33 @@
         "clean-dist": "rimraf build",
         "test": "jest -c=\"jest.config.ts\" --passWithNoTests",
         "tdd": "npm test -- --watch --watchman --coverage=false",
-        "dtsgen": "tsc -d --emitDeclarationOnly --pretty && merge-dirs build/dts build && rm -rf build/dts && rimraf build/**/*.test.*"
+        "dtsgen": "tsc -d --emitDeclarationOnly --pretty && cp -R build/dts/* build && rm -rf build/dts && rimraf build/**/*.test.*"
     },
     "peerDependencies": {
         "@bemit/redis": "~0.1.0-alpha.0",
         "redis": "^4.0.2",
         "superagent": "^7.1.5 || ^8.0.0"
     },
+    "peerDependenciesMeta": {
+        "redis": {
+            "optional": true
+        },
+        "@bemit/redis": {
+            "optional": true
+        }
+    },
     "dependencies": {
-        "jsonwebtoken": "^8.5.1"
+        "jsonwebtoken": "^9.0.0"
     },
     "devDependencies": {
         "@bemit/redis": "~0.1.0-alpha.0",
-        "@types/jsonwebtoken": "^8.5.8",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/superagent": "^4.1.15",
         "superagent": "^8.0.0",
         "@babel/cli": "^7.14.5",
         "@babel/core": "^7.14.6",
         "@babel/eslint-parser": "^7.18.2",
         "@babel/node": "^7.14.7",
-        "@babel/plugin-proposal-class-properties": "^7.14.5",
-        "@babel/plugin-proposal-export-default-from": "^7.14.5",
-        "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
-        "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-        "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-modules-commonjs": "^7.14.5",
-        "@babel/plugin-transform-runtime": "^7.14.5",
         "@babel/preset-env": "^7.14.7",
         "@babel/preset-typescript": "^7.16.0",
         "@jest/types": "^28.1.3",
@@ -74,8 +75,6 @@
         "@typescript-eslint/parser": "^5.6.0",
         "babel-jest": "^28.1.3",
         "babel-loader": "^8.1.0",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "babel-plugin-transform-export-extensions": "^6.22.0",
         "cross-env": "^7.0.3",
         "cross-spawn": "^7.0.3",
         "eslint": "^8.19.0",
@@ -84,7 +83,6 @@
         "eslint-plugin-react": "^7.24.0",
         "jest": "^28.1.3",
         "jest-runner-eslint": "^1.0.0",
-        "merge-dirs": "^0.2.1",
         "redis": "^4.0.2",
         "rimraf": "^3.0.0",
         "symlink-dir": "^5.0.1",
